src/components/Navigation/Navigation.module.css
.nav {
    position: fixed;
    padding: 0 6px;
    z-index: 1;
    top: 3%;
    left: 5%;
}

/* https://www.w3schools.com/howto/howto_css_menu_icon.asp */
.barOne, .barTwo, .barThree {
    width: 35px;
    height: 5px;
    background-color: #ffffff;
    border-radius: 2px;
    margin: 6px 0;
    transition: .5s;
}

@keyframes slidein {
    from{transform: translateX(-100%);}
    to{transform: translateX(0%);}
}

.navMenu {
    position: fixed;
    left: 0;
    top: 0px;
    width: 100vw;
    animation: slidein .5s;
    background-color: black;
    padding-top: 15%;
}

.jumpLink, .resumeLink {
    font-size: 1.2rem;
    font-weight: 600;
    width: 100%;
    padding: 4% 6%;
    letter-spacing: 1px;
}

.jumpLink:hover, .resumeLink:hover {
    background-color: rgb(90,90,90,1);
    transition: ease-in .2s;
    cursor: pointer;
}

.otherLink {
    display: flex;
    padding: 2% 6% 4%;
}

.aTag {
    margin-right: 7%;
}

.imgLink {
    display: flex;
    justify-content: center;
    width: 40px;
    filter: grayscale(100%);
}

.imgLink:hover {
    filter: none;
    transition: ease-in .2s;
}

@media (min-width: 600px) {
    .nav {
        left: 3%;
    }

    .navMenu {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        padding: 1.5% 0% 1.5% 10%;
    }

    .jumpLink, .resumeLink {
        display: inherit;
        padding: 0%;
        align-items: center;
        flex-basis: 10%;
    }

    .aTagNav {
        display: inherit;
        align-items: center;
        margin-right: 15%;
    }

    .otherLink {
        padding: 0%;
        width: 20%;
    }

    .aTag {
        margin-left: 5%;
        margin-right: 25%;
    }
}

